
  * rename update-manager-support-status to ubuntu-support-status
  * check-new-release-gtk:
    - add gtk tool for release notification that is designed to be
      run from update-notifier (desktop-lucid-update-upgrade-requirements)
  * DistUpgrade/DistUpgradeCache.py:
    - fix crash in cleanup code
    - fix crash when /home is missing (LP: #463506)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - remove old code that moved to python-apt
  * DistUpgrade/DistUpgradeController.py:
    - if universe is not enabled, explain that the demoted packages
      will be suggested for removal in the cleanup stage

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Feb 2010 23:44:00 +0100

update-manager (1:0.132) lucid; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MetaRelease.py:
    - add timeout to meta-release download
  * UpdateManager/MetaReleaseGObject.py:
    - make sure threading is enabled
  * DistUpgrade/DistUpgrade.cfg:
    - add kubuntu-netbook to known metapackages
    - remove usplash artwork from KeyDependencies
  * DistUpgrade/DistUpgradeController.py:
    - test for server mode again after the sources.list rewrite,
      to capture the case when the initial sources.list is empty
  * DistUpgrade/DistUpgradeCache.py:
    - when showing the demoted packages, skip packages that
      are automatic installed
    - improve performance on the removal checks by making use of
      the auto removable information more agressively
    - increase space required by the kernel (it grew)
  * DistUpgrade/DistUpgradeView.py, DistUpgrade/DistUpgradeView{Gtk,KDE}.py:
    - show only non auto-installed removals bold
  * update-manager-support-status:
    - add --show-supported, --show-unsupported and --show-all for summary
    - add --list option for full details

  [ Colin Watson ]
  * update-manager-support-status:
    - fix typo in get_maintenance_status (LP: #513303)
    - add support statistics to the output
