@@ -7,6 +7,7 @@ update-manager (1:0.132.1) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - fix crash in cleanup code
     - fix crash when /home is missing (LP: #463506)
+    - fix component inconsitency detection debug output
   * DistUpgrade/DistUpgradeViewGtk.py:
     - remove old code that moved to python-apt
   * DistUpgrade/DistUpgradeController.py:
